Fix credits, fix quotes alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -261,7 +261,7 @@
 // Source text
 .source {
 	margin-top: $spacing-unit;
-	text-align: center;
+	//text-align: center;
 
 	p {
 	    color: #777;
